--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
   "dependencies": {
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
+    "react-router-dom": "^7.6.2",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
+    "prettier": "^3.5.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
