--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.2",
